outputs/tsp_aco-aco/2026-03-05_12-02-14/problem_iter10_response9.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 515
    n = dist_matrix.shape[0)
                           ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
